fix: delete bug fix

--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
   },
   "homepage": "https://github.com/fssa-batch3/balaji.saravanan__web_project#readme",
   "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
     "browser-sync": "^2.27.11",
+    "husky": "^8.0.3",
     "run-script-os": "^1.1.6"
   },
   "dependencies": {
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "uuid": "^9.0.0"
   }
+  
 }
+
