--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "run-script-os",
-    "start:win32": "browser-sync start --server --files '**/*.html, **/*.css, **/*.js, !node_modules/**/*' --directory --port 1212 --browser \"C:\\Program Files\\Google\\chrome\\Application\\chrome.exe\""
+    "start:win32": "browser-sync start --server --files '**/*.html, **/*.css, **/*.js, !node_modules/**/*' --directory --port 1212 --browser \"C:\\Program Files\\Google\\chrome\\Application\\chrome.exe\"",
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "browser-sync": "^2.27.11",
+    "eslint": "^8.36.0",
     "husky": "^8.0.3",
     "run-script-os": "^1.1.6"
   },
@@ -30,6 +32,4 @@
     "fs": "^0.0.1-security",
     "uuid": "^9.0.0"
   }
-  
 }
-
