--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,21 @@
-on: [push]
+on:
+  pull_request:
+    types: [opened, synchronize]
+  push:
+    branches-ignore:
+      - main
 
 jobs:
-  topic_tagging:
+  hello_world_job:
     runs-on: ubuntu-latest
     name: Topic Tagging
     steps:
-      # To use this repository's private action,
-      # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v3
       - name: Topic Tagger
+        id: topic-tagger
         uses: suryaumapathy2812/topic-tagger-action@v1
         with:
-          # enter the starting point
           start-point: "./"
-          version: "v2"
+          version: "v4"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
